[package]
name = "space-schmucks"
version = "0.1.0"
authors = ["Sam Mohr <sam@mohr.codes>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
thiserror = "1.0"
bevy = "0.3"
serde = { version = "1.0", features = ["derive"] }
structopt = "0.3"
log = "0.4"
simple_logger = "1.11.0"
wasmer-runtime = "0.17.1"
uuid = { version = "0.8", features = ["v4", "serde"] }
